fixed alignment issues

--- a/src/items/item.css
+++ b/src/items/item.css
@@ -11,6 +11,7 @@
 
 .mount-fuji {
   margin-right: 20px;
+  width: 20%;
 }
 
 .section-location-top {
@@ -23,7 +24,6 @@
 }
 
 .country {
-  width: 40px;
   height: 10px;
   margin-right: 12px;
   font-size: 11px;
@@ -42,4 +42,19 @@
   width: 326px;
   font-size: 25px;
   line-height: 30px;
+  color: #2B283A;
+}
+
+.date {
+  font-size: 12px;
+  line-height: 11px;
+  color: #2B283A;
+  margin-top: 20px;
+}
+
+.description {
+  font-size: 11px;
+  line-height: 150%;
+  margin-top: 9px;
+  color: #2B283A
 }
